<resources>
    <string name="app_name">Petsus</string>
    <string name="lottie_loading">loading.json</string>
    <string name="default_permission">Permissão para a tela</string>

    <string name="error_generic">Unable to complete action</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="create_account">Não possui conta? <font fgcolor='#4FD8EB'>Crie agora</font></string>
    <string name="invalid_email">Email invalid</string>
    <string name="reset_password">Esqueceu a senha?</string>
    <string name="reset_password_title">Recuperar senha</string>
    <string name="home">Home</string>
    <string name="clinic">Clínica</string>
    <string name="animal">Animal</string>
    <string name="profile">Perfil</string>
    <string name="logout">Logout</string>
    <string name="address">Endereço</string>
    <string name="continue_text">Continue</string>
    <string name="login_google">Login Google</string>
    <string name="or_login_social">Ou login com</string>
    <string name="send_reset_successfull">Email de recuperação enviado, verifique a mensagem enviado no email informado</string>
    <string name="create_account_title">Criar conta</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="about">Sobre</string>
    <string name="save_changes">Salvar</string>
    <string name="opening_hours">Horário de atendimento</string>
    <string name="species_served">Espécies atendidas</string>
    <string name="see_more">Ver mais</string>
    <string name="exam_served">Exames prestados</string>
    <string name="visit_site">Visite o site</string>
    <string name="call_clinic">Ligue para a clinica</string>
    <string name="cant_load_clinic">Não conseguimos carregar a clinic.</string>
    <string name="retry">Tentar novamente</string>
    <string name="info">Informações</string>
    <string name="species">Espécies</string>
    <string name="exams">Exames</string>
    <string name="be_careful_your_animal">Cuide dos seu animais domésticos.\nCom segurança e privacidade.</string>
    <string name="click_to_go">Clique aqui para visitar o site</string>
    <string name="add_animal">Adicionar animal</string>
    <string name="delete">Deletar</string>
    <string name="basic_data">Dados básicos</string>
    <string name="name_animal">Nome do animal</string>
    <string name="weight_animal">Peso do animal</string>
    <string name="kg">kg</string>
    <string name="height_animal">Altura do animal</string>
    <string name="cm">cm</string>
    <string name="birthday_animal">Data de nascimento</string>
    <string name="race_animal">Raça do animal</string>
    <string name="record_medic_animal">Históricos médicos</string>
    <string name="tracker_animal">Rastreador</string>
    <string name="see_qr_code">Ver o QR Code</string>
    <string name="qr_code">QRCode</string>
    <string name="register_qr_code">Registrar QRCode</string>
    <string name="unregister_qr_code">Remover QRCode</string>
    <string name="save">Salvar</string>
    <string name="history_medical">Histórico Médico</string>
    <string name="add_history">Adicionar histórico</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="select_birthday">Seleciona a data de nascimento</string>
    <string name="add_address">Adicionar endereço</string>
    <string name="nickname">Apelido</string>
    <string name="number_address">Número do endereço</string>
    <string name="complement_address">Complemento do endereço</string>
    <string name="neighborhood_address">Bairro</string>
    <string name="error_nickname">Por favor, preencher o apelido</string>
    <string name="error_address">Por favor, preencher o endereço</string>
    <string name="error_neighborhood">Por favor, preencher o bairro</string>
    <string name="error_number_address">Por favor, preencher o número do endereço</string>
    <string name="search_address">Pesquisar</string>
    <string name="address_animal">Endereço do animal</string>
    <string name="notifications">Notificações</string>
    <string name="close">Fechar</string>
    <string name="redirect_maps">Iniciar rota</string>
    <string name="your_animal_found">%s foi localizado</string>
    <string name="qr_code_scanner">QRCode</string>
    <string name="confirm_and_continue">Confirmar e continuar</string>
    <string name="specie_animal">Espécie do animal</string>
    <string name="search_exam">Pesquisar por exames</string>
    <string name="search_vaccine">Pesquisar por vacinas</string>
    <string name="name_veterinary">Nome do veterinário</string>
    <string name="search">Pesquisar</string>
    <string name="empty_news">Sem notícias por enquanto</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_phone">Celular inválido</string>
    <string name="without_veterinary">Sem veterinário</string>
</resources>