<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment_menu"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/qr_code_scanner_fragment_menu"
        android:icon="@drawable/icon_qr_code_scanner"
        android:title="@string/qr_code_scanner" />

    <item
        android:id="@+id/clinic_fragment_menu"
        android:icon="@drawable/icon_navigation"
        android:title="@string/clinic" />

    <item
        android:id="@+id/animal_fragment_menu"
        android:icon="@drawable/icon_animal"
        android:title="@string/animal" />

    <item
        android:id="@+id/profile_fragment_menu"
        android:icon="@drawable/icon_person"
        android:title="@string/profile" />

</menu>